--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <!-- SCROLLS -->
   <link rel="stylesheet" href="css/bootstrap.min.css" />  
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
+<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+<link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <!-- SPELLS -->
   <script src="js/angular.min.js"></script>
   <script src="js/angular-route.min.js"></script>
