--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <script src="http://platform.linkedin.com/in.js" type="text/javascript"></script>
   <script src="https://apis.google.com/js/platform.js" async defer></script>
   <script src="script.js"></script>
-  <base href="http://localhost/vydyas.github.io/">
-  <meta name="fragment" content="!">
+ <!-- <base href="http://localhost/vydyas.github.io/">
+  <meta name="fragment" content="!">-->
   <style type="text/css">
    body {
   margin:0;
