added change my dress

--- a/pages/about.html
+++ b/pages/about.html
@@ -49,9 +49,9 @@
       <h1 class="titlebg copypasteanim">Siddhu Vydyabhushana</h1>
       </div>
       <div class="col-sm-12">
-      <p class="taglinebg">Software Enginner @ TCS, Creative, Thinker, Full Stack Web Developer</p>
+      <p class="taglinebg">Principal Enginner @ Logos.social, Full Stack Web Developer</p>
 
-      <p>I am 22 years old passionated , entusiastic UI/UX and Java Developer.My key weapons are Angular Js, Java, HTML 5,Javascript. </p>
+      <p>I am 23 years old passionated , entusiastic UI/UX and Java Developer </p>
       
       </p>
       <p>
