--- a/pages/header.html
+++ b/pages/header.html
@@ -23,6 +23,18 @@
             <ul class="nav navbar-nav navbar-left">
         <li><a href="#" ng-click="openNav()"  class="nopadding">☰ <img src="images/profile.png"/><b> Siddhu.Info </b></a></li>
        </ul>
+       <ul class="nav navbar-nav navbar-right">
+        <li>
+          <div class="dropdown">
+  <button class="dropbtn">Change My Dress...</button>
+  <div class="dropdown-content">
+    <a href="#">Link 1</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+  </div>
+</div>
+        </li>
+       </ul>
 
 </div>
 <div class="sub_header">
