--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
    body {
   margin:0;
   padding:0;
+  overflow-x: hidden;
   }
   .blue
   {
@@ -184,7 +185,6 @@ li a:hover{
     background: #333;
     color: white;
     padding: 3px;
-    width: 85%;
     -webkit-animation-name:pulse;
   -webkit-animation-duration:3s;
   
@@ -441,6 +441,47 @@ li a:hover{
     float: left;
     margin-left: 16px;
 }
+.dropbtn {
+    background-color: #eee;
+    color: red;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+    padding-right: 20px;
+    margin-top: 3px;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #eee;
+}
   </style>
 </head>
 
@@ -454,13 +495,9 @@ li a:hover{
     <div ng-view></div>
     
   </div>
- 
+</body>
 <footer>
 </footer>
-
-<script src="js/nanobar.min.js"></script>
-</body>
-
 
 </html>
 
