--- a/pages/skills.html
+++ b/pages/skills.html
@@ -41,6 +41,7 @@
           <li>HTML5, CSS3</li>
         <li>Core Javascript</li>
           <li>Angular</li>
+	   <li>React, Redux</li>
         <li>PHP, MySQL</li>
       <ul>
       </div>
