--- a/pages/about.html
+++ b/pages/about.html
@@ -42,7 +42,7 @@
   </div>
   <div class="col-sm-5">
   <div class="row">
-      <div class="col-sm-12" style="margin-top:2%"><img src="images/collage.jpg" style="width: 105.3%;margin-left: -13px;"/></div>
+      <div class="col-sm-12" style="margin-top:2%"><img src="images/color.jpg" style="width: 105.3%;margin-left: -13px;"/></div>
       <div class="col-sm-12" style="background: #eee;">
       <div class="row">
       <div class="col-sm-12">
@@ -71,7 +71,7 @@
   
   <div class="col-sm-5">
   <div class="row">
-      <div class="col-sm-12" style="margin-top:2%"><img src="images/collage.jpg" style="width: 105.3%;margin-left: -13px;"/></div>
+      <div class="col-sm-12" style="margin-top:2%"><img src="images/color.jpg" style="width: 105.3%;margin-left: -13px;"/></div>
       <div class="col-sm-12" style="background: #eee;">
       <div class="row">
       <div class="col-sm-12">
