--- a/pages/header.html
+++ b/pages/header.html
@@ -1,4 +1,4 @@
-<!-- <div class="container"  data-ng-show="parentObj.header2==false">
+<div class="container"  data-ng-show="parentObj.header2==false">
       
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#about" ng-click="about()"><i class="fa fa-home"></i>Siddhu Vydyabhushana</a></li>
@@ -7,11 +7,7 @@
         <li><a href="#images">mail to :{{email.daffa}}</a></li>
         <li><button ng-click="sid();">hie</button></li>
       </ul>
-      <ul class="nav navbar-nav navbar-left">
-        <li><a href="#" ><img src="images/profile.png"/></a></li>
-        <li data-ng-show="parentObj.headerSearch==true"><input class="headerInput"  ng-disabled="parentObj.headerSearch" ng-model="headerInput" placeholder="Type here to know about me...." ui-items="names" type="text" auto-complete></li>        
-      </ul>
-    </div>-->
+    </div>
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" ng-click="closeNav()">&times;</a>
   <a href="#/about">About</a>
