--- a/pages/header.html
+++ b/pages/header.html
@@ -1,4 +1,4 @@
-<div class="container"  data-ng-show="parentObj.header2==false">
+<div class="container">
       
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#about" ng-click="about()"><i class="fa fa-home"></i>Siddhu Vydyabhushana</a></li>
