--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ left: 0px;
 position: fixed;
 width: 100%;
 height:120px;
-background-image:url('images/footer.png');
+background-image:url('images/unnamed.png');
   }
   .mosaicflow__column {
   float:left;
