Added top border and removed footer

--- a/supportjanasena/index.html
+++ b/supportjanasena/index.html
@@ -4,6 +4,7 @@
   <title>Support Janasena Party | Youth in politics concept by siddhu vydyabhushana</title>
   <meta name="description" content="JanaSena Party is an Indian political party in the states of Andhra Pradesh and Telangana, founded by actor turned politician Pawan Kalyan on 14 March 2014. Jana Sena means People’s Army in Telugu">
   <meta name="keywords" content="janasena party, support janasena, youth in politics,political ideas, new political strategies">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="img/favicon.png">
   <link href="css/style.css" rel="stylesheet"/>
   <link href="css/signature.css" rel="stylesheet"/>
@@ -12,6 +13,9 @@
 </head>
 <body onload="loading()">
   <div id="loader"></div>
+  <div class="blackBorder"></div>
+  <div class="whiteBorder"></div>
+
   <!-- Header for site-->
   <header>
     <div class="logo"></div>
@@ -44,7 +48,7 @@
     <div class="background"></div>
   </div>
   <!-- Footer for site-->
-  <footer></footer>
+  <!-- <footer></footer> -->
   <script src="js/script.js" type="text/javascript"></script
 </body>
 </html>
