--- a/supportjanasena/index.html
+++ b/supportjanasena/index.html
@@ -4,6 +4,7 @@
   <title>Support Janasena Party | Youth in politics concept by siddhu vydyabhushana</title>
   <meta name="description" content="JanaSena Party is an Indian political party in the states of Andhra Pradesh and Telangana, founded by actor turned politician Pawan Kalyan on 14 March 2014. Jana Sena means People’s Army in Telugu">
   <meta name="keywords" content="janasena party, support janasena, youth in politics,political ideas, new political strategies">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="img/favicon.png">
   <link href="css/style.css" rel="stylesheet"/>
