Registration form pushed

--- a/supportjanasena/index.html
+++ b/supportjanasena/index.html
@@ -39,7 +39,7 @@
       <p class="signature">-Pawan Kalyan</p>
     </div>
     <div class="buttonWrapper">
-      <a class="register">CLICK HERE TO SUPPORT JANASENA</a>
+      <a  href="janasena-supporters-registration/index.html" class="register">CLICK HERE TO SUPPORT JANASENA</a>
     </div>
   </div>
 
