--- a/supportjanasena/janasena-supporters-registration/index.html
+++ b/supportjanasena/janasena-supporters-registration/index.html
@@ -4,10 +4,10 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Natural Language Form</title>
-		<meta name="description" content="Natural Language Form with custom text input and drop-down lists" />
-		<meta name="keywords" content="Natural Language UI, sentence form, text input, contenteditable, html5, css3, jquery" />
-		<meta name="author" content="Codrops" />
+		<title>Janasena Party supporters registration form | Youth in politics</title>
+	  <meta name="description" content="JanaSena Party is an Indian political party in the states of Andhra Pradesh and Telangana, founded by actor turned politician Pawan Kalyan on 14 March 2014. Jana Sena means People’s Army in Telugu">
+	  <meta name="keywords" content="janasena party, support janasena, youth in politics,political ideas, new political strategies">
+		<meta name="author" content="Siddhu Vydyabhushana" />
 		<link rel="icon" type="image/png" href="../img/favicon.png">
 		<link rel="stylesheet" type="text/css" href="css/default.css" />
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
