--- a/supportjanasena/janasena-supporters-registration/index.html
+++ b/supportjanasena/janasena-supporters-registration/index.html
@@ -24,12 +24,23 @@
 				<h1>
 					<p style="background: #ec3333;color:#eee">Janasena party stands for strengthening and empowering civil society.</p>
 					<span>Fill below form to support janasena party</span>
-				</h1>
+				</h1><br/>
+				<p id="error"></p>
 			</header>
 			<div class="main clearfix">
 				<p style="font-size: 35px;">Dear Janasena Party,</p>
-				<form id="nl-form" class="nl-form">
-					I, <input type="text" value="" placeholder="your name" data-subline="For example: <em>Siddhu Vydyabhushana</em>"/>
+				<form id="nl-form" class="nl-form" name="letter">
+					I,
+					<div class="tooltip">
+						<input type="text"
+							value=""
+							id="fullName"
+							placeholder="your name"
+							data-subline="For example: <em>Siddhu Vydyabhushana</em>"
+							onblur="valueChanged(this)"
+						/>
+						<span id="tooltiptext"></span>
+					</div>
 					from
 					<select>
 						<option value="" selected>Your State</option>
@@ -53,7 +64,7 @@
 					<input type="text" value="" placeholder="Your Email" data-subline="For example: <em>Siddhu Vydyabhushana</em>" required/><br/>
 					<input type="text" value="" placeholder="Your Mobile Number" data-subline="For example: <em>Siddhu Vydyabhushana</em>"/>
 					<div class="nl-submit-wrap">
-						<button class="nl-submit" type="submit">Submit your letter</button>
+						<button type="submit" class="nl-submit" id="submit"/> Submit your letter </button>
 					</div>
 					<div class="nl-overlay"></div>
 				</form>
@@ -63,6 +74,26 @@
 		<script src="../js/script.js" type="text/javascript"></script>
 		<script>
 			var nlform = new NLForm( document.getElementById( 'nl-form' ) );
+			var submit = document.getElementById('submit');
+			var fullName = document.getElementById('fullName');
+
+			function valueChanged(event) {
+				if(event.id === 'fullName' && event.value !=='') {
+					fullName.value = event.value;
+					document.getElementById('tooltiptext').style.visibility = "hidden";
+				}
+			}
+
+			submit.addEventListener('click', ()=> {
+					if(fullName.value == '') {
+						debugger;
+						document.getElementById('tooltiptext').innerHTML = "Please fill Full Name";
+						document.getElementById('tooltiptext').style.visibility = "visible";
+					} else {
+						document.getElementById('tooltiptext').style.visibility = "hidden";
+						document.getElementById('tooltiptext').innerHTML = "";
+					}
+			});
 		</script>
 	</body>
 </html>
