--- a/supportjanasena/janasena-supporters-registration/index.html
+++ b/supportjanasena/janasena-supporters-registration/index.html
@@ -31,7 +31,6 @@
 				<p style="font-size: 35px;">Dear Janasena Party,</p>
 				<form id="nl-form" class="nl-form" name="letter">
 					I,
-					<div class="tooltip">
 						<input type="text"
 							value=""
 							id="fullName"
@@ -39,13 +38,12 @@
 							data-subline="For example: <em>Siddhu Vydyabhushana</em>"
 							onblur="valueChanged(this)"
 						/>
+					<span class="tooltip">
 						<span id="tooltiptext"></span>
-					</div>
+					</span>
 					from
-					<select>
-						<option value="" selected>Your State</option>
-						<option value="2">Andhra Pradesh</option>
-						<option value="3">Telangana</option>
+					<select id="yourState" onblur="valueChanged(this)">
+						<option value="" id="stateSel" selected>Your State</option>
 					</select> state,
 					<select>
 						<option value="" selected>District</option>
@@ -76,6 +74,36 @@
 			var nlform = new NLForm( document.getElementById( 'nl-form' ) );
 			var submit = document.getElementById('submit');
 			var fullName = document.getElementById('fullName');
+
+			var stateObject = {
+					"Andhra Pradesh": ["Salinas", "Gonzales"],
+					"Telangana": ["Oakland", "Berkeley"]
+			}
+
+			window.onload = function () {
+				var stateSel = document.getElementById("stateSel");
+
+				for (var state in stateObject) {
+					stateSel.options[stateSel.options.length] = new Option(state, state);
+				}
+				// stateSel.onchange = function () {
+				// 	countySel.length = 1; // remove all options bar first
+				// 	citySel.length = 1; // remove all options bar first
+				// 	if (this.selectedIndex < 1) return; // done
+				// 	for (var county in stateObject[this.value]) {
+				// 		countySel.options[countySel.options.length] = new Option(county, county);
+				// 	}
+				// }
+				// stateSel.onchange(); // reset in case page is reloaded
+				// countySel.onchange = function () {
+				// 	citySel.length = 1; // remove all options bar first
+				// 	if (this.selectedIndex < 1) return; // done
+				// 	var cities = stateObject[stateSel.value][this.value];
+				// 	for (var i = 0; i < cities.length; i++) {
+				// 		citySel.options[citySel.options.length] = new Option(cities[i], cities[i]);
+				// 	}
+				// }
+			}
 
 			function valueChanged(event) {
 				if(event.id === 'fullName' && event.value !=='') {
