--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
 <html ng-app="scotchApp" lang="en">
 
 <head>
+  <script>
+    const host = "copythestyle.com";
+    if((host == window.location.host) && (window.location.protocol !="https:"))
+      window.location.protocol = "https";
+  </script>
   <!-- SCROLLS -->
+  <link rel="canonical" href="copythestyle.com" /> 
   <link rel="stylesheet" href="css/bootstrap.min.css" />  
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
