--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+  <!-- Pixel Code for https://notifyfy.com/ -->
+<script async src="https://notifyfy.com/pixel/lh2i1z9etoxv097eflmajmdoaocdxjze"></script>
+<!-- END Pixel Code -->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
