--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-  <!-- Pixel Code for https://notifyfy.com/ -->
-<script async src="https://notifyfy.com/pixel/lh2i1z9etoxv097eflmajmdoaocdxjze"></script>
 <!-- END Pixel Code -->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -525,6 +523,7 @@ li a:hover{
     <div ng-view></div>
     
   </div>
+  <script src="//code.tidio.co/qsdhkejbyxvsmcu3hnzciy5gqwhdweyg.js" async></script>
 </body>
 <footer>
 </footer>
